--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "node-fetch": "^3.2.6",
     "openai": "^3.3.0",
     "split-string": "^6.1.0"
-  }
+  },
+  "scripts": {
+  "start": "node index.js"
+},
+  
 }
