--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Connecting ChatGPT with Messenger",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "start": "node index.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
